# c-application-template

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: continuous-integration.yml
app/: main.c
ctest/: CMakeLists.txt  test_applib.c
docs/: Doxyfile.in  quick-start-with-clion.md
include/app/: app.h
scripts/: project.ps1  project.sh  setup-arch.sh  setup-macos.sh  setup-ubuntu-24.04.sh  setup-windows.ps1
src/: app.c
